0.11.x/_sources/api/skimage.measure.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`measure`
======================
.. automodule:: skimage.measure

.. currentmodule:: skimage.measure
.. autosummary::

   skimage.measure.approximate_polygon
   skimage.measure.block_reduce
   skimage.measure.correct_mesh_orientation
   skimage.measure.find_contours
   skimage.measure.grid_points_in_poly
   skimage.measure.label
   skimage.measure.marching_cubes
   skimage.measure.mesh_surface_area
   skimage.measure.moments
   skimage.measure.moments_central
   skimage.measure.moments_hu
   skimage.measure.moments_normalized
   skimage.measure.perimeter
   skimage.measure.points_in_poly
   skimage.measure.profile_line
   skimage.measure.ransac
   skimage.measure.regionprops
   skimage.measure.structural_similarity
   skimage.measure.subdivide_polygon

   skimage.measure.CircleModel
   skimage.measure.EllipseModel
   skimage.measure.LineModel

approximate_polygon
-------------------

.. autofunction:: skimage.measure.approximate_polygon

block_reduce
------------

.. autofunction:: skimage.measure.block_reduce

correct_mesh_orientation
------------------------

.. autofunction:: skimage.measure.correct_mesh_orientation

find_contours
-------------

.. autofunction:: skimage.measure.find_contours

grid_points_in_poly
-------------------

.. autofunction:: skimage.measure.grid_points_in_poly

label
-----

.. autofunction:: skimage.measure.label

marching_cubes
--------------

.. autofunction:: skimage.measure.marching_cubes

mesh_surface_area
-----------------

.. autofunction:: skimage.measure.mesh_surface_area

moments
-------

.. autofunction:: skimage.measure.moments

moments_central
---------------

.. autofunction:: skimage.measure.moments_central

moments_hu
----------

.. autofunction:: skimage.measure.moments_hu

moments_normalized
------------------

.. autofunction:: skimage.measure.moments_normalized

perimeter
---------

.. autofunction:: skimage.measure.perimeter

points_in_poly
--------------

.. autofunction:: skimage.measure.points_in_poly

profile_line
------------

.. autofunction:: skimage.measure.profile_line

ransac
------

.. autofunction:: skimage.measure.ransac

regionprops
-----------

.. autofunction:: skimage.measure.regionprops

structural_similarity
---------------------

.. autofunction:: skimage.measure.structural_similarity

subdivide_polygon
-----------------

.. autofunction:: skimage.measure.subdivide_polygon


:class:`CircleModel`
--------------------


.. autoclass:: CircleModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

:class:`EllipseModel`
---------------------


.. autoclass:: EllipseModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

:class:`LineModel`
------------------


.. autoclass:: LineModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__
